--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     <version>1.0.0</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <build>
